--- a/impactechomodel.ipynb
+++ b/impactechomodel.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPAMLsmkARPrkZZ9lSYRWo3",
+      "authorship_tag": "ABX9TyPLXV+O4GFyiTYWtGuZiUa6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,12 +25,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shikshith05/ImpactEcho/blob/main/impactechomodel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shikshith05/AI-model-for-ImpactEcho/blob/main/impactechomodel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "9kyYDSjuWp5z"
       },
@@ -65,7 +65,7 @@
         "    real_data, fake_data = [], []\n",
         "    base_time = datetime(2025, 9, 1, 10, 0, 0)\n",
         "\n",
-        "    # ✅ Generate real records\n",
+        "    #  Generate real records\n",
         "    for _ in range(num_real):\n",
         "        ngo_id = random.choice(ngo_ids)\n",
         "        project = random.choice(project_types)\n",
@@ -238,10 +238,10 @@
         "# Copy dataframe to avoid modifying original\n",
         "df = impact_df.copy()\n",
         "\n",
-        "# 1️⃣ Derived feature\n",
+        "#  Derived feature\n",
         "df['beneficiary_gap'] = df['reported_beneficiaries'] - df['verified_beneficiaries']\n",
         "\n",
-        "# 2️⃣ Features & labels\n",
+        "#  Features & labels\n",
         "features = [\n",
         "    'reported_beneficiaries',\n",
         "    'verified_beneficiaries',\n",
@@ -255,7 +255,7 @@
         "X = df[features]\n",
         "y = df['is_fake']\n",
         "\n",
-        "# 3️⃣ Encode categorical columns\n",
+        "#  Encode categorical columns\n",
         "categorical_cols = ['ngo_id', 'project_type', 'location']\n",
         "encoders = {}\n",
         "for col in categorical_cols:\n",
@@ -272,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gJbDre1wYdam",
-        "outputId": "4aac3db3-daa7-47b3-b838-2b6a3b771e5a"
+        "outputId": "07b02bd0-a4c3-4896-af45-afda4c35f507"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,19 +300,19 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2911067586.py:28: SettingWithCopyWarning: \n",
+            "/tmp/ipython-input-312870813.py:28: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  X[col] = le.fit_transform(X[col])\n",
-            "/tmp/ipython-input-2911067586.py:28: SettingWithCopyWarning: \n",
+            "/tmp/ipython-input-312870813.py:28: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  X[col] = le.fit_transform(X[col])\n",
-            "/tmp/ipython-input-2911067586.py:28: SettingWithCopyWarning: \n",
+            "/tmp/ipython-input-312870813.py:28: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
